# lab01

./: .gitignore  CMakeLists.txt  README.md  main.cpp
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
bulid/.cmake/api/v1/reply/: cache-v2-1f952939a19660c60f7b.json  cache-v2-bebcdb53dbab6c39f025.json  cache-v2-cf840abda44fcafa4fba.json  cmakeFiles-v1-0d033a5eca477f897ed7.json  cmakeFiles-v1-2ebd33da5b73f8c4f8a7.json  cmakeFiles-v1-896e97385a0ca3b9f0ee.json  codemodel-v2-14cb81540882bb25bf55.json  codemodel-v2-36dd5fc0e68acd16f8d4.json  codemodel-v2-dfeb86c8c1294ba93d0b.json  directory-.-Debug-6fd9325888786d898e38.json  directory-src.task_manager-Debug-48014e1cd415ce350b72.json  index-2024-09-26T07-05-48-0895.json  index-2024-09-30T07-52-05-0703.json  index-2024-09-30T15-45-48-0907.json  target-QtInterface-Debug-f89e1e347e67ebc117a9.json  target-QtInterface_autogen-Debug-d8ef6fe41690bb75f859.json  target-Task-Debug-aeff1b08094fc97e0e2b.json  target-Task-Debug-e369cb19f4ebfe805eb7.json  target-Task_Manager-Debug-84155dde2504ec2001e1.json  target-Task_Manager-Debug-a5a9aba93d8c61f77c31.json  target-Task_Manager_autogen-Debug-52af71aaa046f963cc71.json  target-Task_Manager_autogen_timestamp_deps-Debug-8e08a06025a096362ed5.json  target-Task_autogen-Debug-c70bd08ecc1404e7eac5.json  target-Task_autogen_timestamp_deps-Debug-6625491fdf5d52d9de29.json  target-Utils-Debug-1b00ad386230f3120a47.json  target-Utils-Debug-46f6a3877d16c6d5ae66.json  target-Utils_autogen-Debug-d82a8374368766b5e1f4.json  target-main-Debug-397323c3d58c3e3cff51.json  target-main-Debug-72e70d06ba9f933a67e5.json  target-main_autogen-Debug-ae9172f8d8a79c10216e.json  (+3 more)
bulid/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
bulid/main_autogen/: deps  moc_predefs.h
bulid/main_autogen/JRE2V2YCE3/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
bulid/src/QtInterface/: Makefile  cmake_install.cmake
bulid/src/qt_interface/: Makefile  cmake_install.cmake
bulid/src/qt_interface/QtInterface_autogen/: deps  moc_predefs.h
bulid/src/task/: Makefile  cmake_install.cmake
bulid/src/task/Task_autogen/: deps
bulid/src/task_manager/: Makefile  cmake_install.cmake
bulid/src/task_manager/Task_Manager_autogen/: deps  moc_predefs.h
bulid/src/utils/: Makefile  cmake_install.cmake
bulid/src/utils/Utils_autogen/: deps
data/: original_data.csv  test.txt
src/: resources.qrc
src/list_group/: ListGroup.cpp  ListGroup.hpp
src/qt_interface/: TaskModel.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/task/: CMakeLists.txt  Task.cpp  Task.hpp
src/task_manager/: CMakeLists.txt  DLinkList.cpp  DLinkList.hpp  LinkList.cpp  LinkList.hpp  SeqList.cpp  SeqList.hpp  TaskList.cpp  TaskList.hpp
src/utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
(+3 files in other folders)
